# DFToy

./: .gitignore  Makefile  README.md  notes_for_setup.txt
C/: Makefile  Makefile.intel  a.out  c_interface.c  diag.c  eigensolver  eigensolver.c  eigensolver_complete.c  eigensolver_complete.f90  eigensolver_d_ortho.co  eigensolver_solution1.c  eigensolver_solution2_steepest_descent.c  eigensolver_solution3_conjugate_gradient.c  eigensolver_solution3_precondition_steepest_descent.c  eigensolver_solution4_precondition_conjugate_gradient.c  hamiltonian.h  interface.h  pot.b  trace.c  trace.h  tst.c  wvfn.b
C++/: CMakeLists.txt  Makefile  eigensolver.cpp  hamiltonian.f90  hamiltonian_c.cpp  hamiltonian_c.hpp
C/include/: diag.h  interface.h  interfaces.h  parallel.h  trace.h
C/src/: c_interface.c  eigensolver.c  exact.c  iterative.c  main.c  parallel.c  params.c  trace.c
C/src/solvers/: Makefile  elpa.c  lapack.c  scalapack.c
C/src/solvers/cpu/: Makefile  diag.c  elpa.c
Fortran/: Makefile  dftoy.f90  eigensolver.f90  eigensolver_solution2_steepest_descent.f90  eigensolver_solution3_precondition_steepest_descent.f90  eigensolver_solution4_precondition_conjugate_gradient.f90  eigensolver_solution6_omp.f90  gmon.out  hamiltonian.f90  precon.f90
Fortran/partial_solutions_1d/: eigensolver_solution1.f90  eigensolver_solution3_conjugate_gradient.f90  eigensolver_solution5_multistate_precondition_conjugate_gradient.f90
include/: interfaces.h  parallel.h
src/: iterative.c  main.c  params.c  trace.c  ylm_funcs.c
src/solvers/: Makefile  lapack.c  scalapack.c
